Update notch files

--- a/notch/关于刘海屏适配.md
+++ b/notch/关于刘海屏适配.md
@@ -64,9 +64,15 @@ getWindow().setAttributes(params);
 
 共支持三种模式：
 
-- LAYOUT_IN_DISPLAY_CUTOUT_MODE_DEFAULT：
-- LAYOUT_IN_DISPLAY_CUTOUT_MODE_SHORT_EDGES：
-- LAYOUT_IN_DISPLAY_CUTOUT_MODE_NEVER：
+- LAYOUT_IN_DISPLAY_CUTOUT_MODE_DEFAULT：只有当系统提供的bar完全包含了刘海区时才允许window扩展到刘海区,否则window不会和刘海区重叠。
+
+  
+
+- LAYOUT_IN_DISPLAY_CUTOUT_MODE_SHORT_EDGES：允许window扩展到刘海区(原文说的是短边的刘海区, 目前有刘海的手机都在短边,所以就不纠结了)
+
+  
+
+- LAYOUT_IN_DISPLAY_CUTOUT_MODE_NEVER：不允许window扩展到刘海区
 
 由于我手头上没有有刘海屏的Android 手机，因此这里使用Android P的虚拟机来进行测试。
 
@@ -78,23 +84,31 @@ getWindow().setAttributes(params);
 
 ![snap_android_notch_mode_select](https://github.com/samlss/Summary/blob/master/notch/snap_android_notch_mode_select.png)
 
-边角显示屏凹口：
+**边角显示屏凹口：**
 
 ![snap_corner_display_cutout](https://github.com/samlss/Summary/blob/master/notch/snap_corner_display_cutout.png)
 
-双显示屏凹口：
+------
 
-![snap_double_display_cutout](https://github.com/samlss/Summary/blob/master/notch/snap_double_display_cutout.png)
+**双显示屏凹口：**
 
-长型显示屏凹口：
+![snap_corner_display_cutout](https://github.com/samlss/Summary/blob/master/notch/snap_corner_display_cutout.png)
+
+------
+
+**长型显示屏凹口：**
 
 ![snap_tall_display_cutout](https://github.com/samlss/Summary/blob/master/notch/snap_tall_display_cutout.png)
+
+------
 
 创建一个普通的应用，我们取长型显示屏分别测试不同的layoutInDisplayCutoutMode：
 
 下面为Activity非全屏：
 
 ![snap_cutout_mode_not_fullscreen](https://github.com/samlss/Summary/blob/master/notch/snap_cutout_mode_not_fullscreen.png)
+
+------
 
 下面为Activity全屏情况下：
 
@@ -108,6 +122,8 @@ getWindow().setFlags(WindowManager.LayoutParams. FLAG_FULLSCREEN ,WindowManager.
 
 
 ![snap_cutout_mode_fullscreen](https://github.com/samlss/Summary/blob/master/notch/snap_cutout_mode_fullscreen.png)
+
+------
 
 下面为Activity沉浸式状态栏情况下：
 
